--- a/Sections/10_Chapter_3.Rmd
+++ b/Sections/10_Chapter_3.Rmd
@@ -5,6 +5,8 @@ output:
     keep_tex: no
     number_sections: yes
 bibliography: ../References/references.bib
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Introduction
@@ -76,7 +78,7 @@ Trophoblast DMCs were enriched for two KEGG pathways, "ECM-receptor interaction"
 
 (ref:ch3fig1cap) Genome-wide characterization of placental cell DNA methylation. **a** Principal components analysis (PCA) was applied to all samples and CpGs. Samples are projected onto axes PC1 and PC2 which account for 41% and 23% total variance, respectively. **b** Results from the differential methylation analysis using the R package *limma* are shown here. DMCs, defined as those tests passing a Bonferroni-adjust *p*-value \<0.01, and a difference in group means \>0.25, were divided into less methylated and more methylated compared to all other cell types. **c** Enrichment analysis of term cell-specific DMCs was carried out on genomic elements using a chi-squared test and a Bonferroni-adjusted p-value \<0.01. The expected (background) frequency, which is the percentage of total tested CpGs in each genomic element, is shown as a black line. **d** Average term placental cell-specific DNA methylation across *TFAP2C* transcripts on chromosome 6, and **e** *INHBA* transcripts on chromosome 7. Differentially methylated regions (defined as regions with a high density of differentially methylated CpGs), are highlighted with a grey background. Y axis ranges from 0 to 100% DNA methylation
 
-```{r ch3fig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch2fig1cap)", fig.align='center',  out.extra=''}
+```{r ch3fig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig1cap)", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure1.pdf'))
 ```
 
@@ -84,13 +86,6 @@ knitr::include_graphics(here::here('images', 'ch3', 'Figure1.pdf'))
 
 A number of regions with a high density of DMCs were located in or nearby functionally- and pathology-relevant genes.
 *TFAP2C*, which encodes a pan-trophoblast marker, were highly methylated in TB compared to other cell types in the promoter and upstream region; whole CV showed a similar profile to TB (Figure \@ref(fig:ch3fig1)d). This region contains several predicted enhancers [@genehanc], which may require DNAm for recruiting transcription factors. Alternatively, other regions more distal to TFAP2C may be responsible for regulation of this gene's transcription. Other trophoblast-specific markers, such as *GCM1*, *MMP2*, *SLC1A5*, and *GATA3*, also had regions of highly cell-specific DNAm localized near their transcription start sites (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Fig. S5). We also observed high DMC density regions in genes for which placental DNAm and/or expression differences have been associated with preeclampsia [@wilson2018], including *INHBA* (Figure \@ref(fig:ch3fig1)e), *JUNB, TEAD3*, *NDRG1*, and *CGA* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S6). Out of 540 preeclampsia-associated CpGs previously identified by Wilson et al. 2018 that were also captured in our processed data, a statistically significant (Bonferroni adjusted *p*\<0.01) fraction ranging from 19.4--27.2% were also identified as exhibiting cell-specific DNAm for term samples (Table \@ref(tab:ch3tab2)) [@wilson2018].
-
-We hypothesized that genome-wide differences in DNAm could in part relate to differences in the expression and DNAm at genes that regulate the deposition, maintenance, and removal of DNAm, such as *DNMT1*, *DNMT3A*, *DNMT3B*, *DNMT3L*, and *TET1*.
-In these genes, we found that a high proportion of CpGs in the promoter region (61, 36, 31, 83, 18%, respectively) were differentially methylated by cell type.
-However, considering the variable number of CpGs associated with each gene's promoter, these percentages were not significantly greater than genes of similar CpG coverage (Fig. [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig2) ab).
-Differential methylation within DNAm-regulating genes was highly localized (Figs. [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig2)c).
-The promoter of DNAm-maintenance gene *DNMT1*, which is known to be specifically imprinted in the placenta [@das2013], shows the expected intermediately methylated (i.e. \~50%) pattern for all cell types except HB, which is completely unmethylated (Fig. [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig2)c).
-This suggests that *DNMT1* is imprinted in TB, SC, and EC, but not in HB.
 
 <!-- Insert Table 2 -->
 
@@ -105,7 +100,16 @@ kableExtra::kbl(
   kableExtra::kable_styling(full_width = TRUE) 
 ```
 
-Insert Figure 2
+We hypothesized that genome-wide differences in DNAm could in part relate to differences in the expression and DNAm at genes that regulate the deposition, maintenance, and removal of DNAm, such as *DNMT1*, *DNMT3A*, *DNMT3B*, *DNMT3L*, and *TET1*.
+In these genes, we found that a high proportion of CpGs in the promoter region (61, 36, 31, 83, 18%, respectively) were differentially methylated by cell type.
+However, considering the variable number of CpGs associated with each gene's promoter, these percentages were not significantly greater than genes of similar CpG coverage (Figure \@ref(fig:ch3fig2)ab). Differential methylation within DNAm-regulating genes was highly localized (Figure \@ref(fig:ch3fig2)c). The promoter of DNAm-maintenance gene *DNMT1*, which is known to be specifically imprinted in the placenta [@das2013], shows the expected intermediately methylated (i.e. \~50%) pattern for all cell types except HB, which is completely unmethylated (Figure \@ref(fig:ch3fig2)c).
+This suggests that *DNMT1* is imprinted in TB, SC, and EC, but not in HB.
+
+(ref:ch3fig2cap) Differential methylation at DNA methylation -regulating genes. **a** On a per-gene basis, the number of promoter CpGs that are differentially methylated by at least one cell type, out of the total number of promoter CpGs per gene. The y=x line is shown (blue), where genes with 100% of promoter CpGs are differentially methylated. The green line is a smoothed average. **b** Distribution of the percentage of promoter CpGs per gene that are differentially methylated. The dotted line represents an array-wide average. **c** DNA methylation at CpGs associated with *DNMT1* for term placental samples (top). CpGs in CpG islands, imprinted regions, PMDs, and enhancers are indicated (middle). Associated UCSC transcripts and their genomic elements (promoter, 5′ UTR, exons, introns, 3'UTR) are displayed (bottom)
+
+```{r ch3fig2, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig2cap)", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch3', 'Figure2.pdf'))
+```
 
 ### DNA methylation characterization of Syncytiotrophoblast and Hofbauer cells
 
@@ -114,20 +118,25 @@ Because mature EVTs exist primarily in maternal tissue, and STBs are structurall
 In order to better understand the relationship between STB and the isolated TB cells, we compared a subset of TB with matched STB from the same placenta that was obtained from enzymatic separation using Collagenase IA (referred to as eSTB; *n*=5) from term CV samples.
 This digestion protocol which extracts the outer layer of the CV, produces a sample enriched for STB, but is likely to also contain a proportion of non-STB cell types.
 To compare eSTB samples globally to other cell types, we projected eSTB onto PCs 1 and 2 to see where they cluster in relation to other samples.
-On PCs 1 and 2, eSTB clustered closely with TB and CV samples, indicating high similarity between these three populations (Fig. [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig3)a).
-Throughout gestation, the STB proportion increases, and is greater in nuclei number compared to CTB at term [@mayhew2001]. To determine if TB or eSTB samples were more similar to CV, unsupervised hierarchical clustering was applied on the top 1000 most variable probes, and resulted in CV clustering with eSTB (Fig. [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig3)b), which is consistent with the expectation that CV consists primarily of STB. Supporting this, we found more DMCs (Bonferroni *p*\<0.01, absolute difference in mean DNAm \> 25%) between TB and eSTB (n DMCs=4666), than between CV and eSTB (n DMCs=72). Differential methylation at specific CpGs localized to genes known to be expressed in STB, such as *CGA*, *CYP19A1*, *PAPPA2*, *PARP1*, *SLC13A4*, and *SLC22A11* (Fig. [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig3)c) [@liu2018; @yabe2016; @butler2017; @simmons2013].
-The direction of DNAm at these CpGs was mostly consistent with expected patterns of genes that are more active in eSTB compared to TB and other placental cell types (i.e. more methylation at introns, less methylation at promoters).
+On PCs 1 and 2, eSTB clustered closely with TB and CV samples, indicating high similarity between these three populations (Figure \@ref(fig:ch3fig3)a). Throughout gestation, the STB proportion increases, and is greater in nuclei number compared to CTB at term [@mayhew2001]. To determine if TB or eSTB samples were more similar to CV, unsupervised hierarchical clustering was applied on the top 1000 most variable probes, and resulted in CV clustering with eSTB (Figure \@ref(fig:ch3fig3)b), which is consistent with the expectation that CV consists primarily of STB. Supporting this, we found more DMCs (Bonferroni *p*\<0.01, absolute difference in mean DNAm \> 25%) between TB and eSTB (n DMCs=4666), than between CV and eSTB (n DMCs=72). Differential methylation at specific CpGs localized to genes known to be expressed in STB, such as *CGA*, *CYP19A1*, *PAPPA2*, *PARP1*, *SLC13A4*, and *SLC22A11* (Figure \@ref(fig:ch3fig3)c) [@liu2018; @yabe2016; @butler2017; @simmons2013].
+The direction of DNAm at these CpGs was mostly consistent with expected patterns of genes that are more active in eSTB compared to TB and other placental cell types (i.e. more methylation at introns, less methylation at promoters)
 
-Insert Figure 3
+<!--- Insert Figure 3 --->
+
+(ref:ch3fig3cap) Characterization of enzymatically-separated syncytiotrophoblast and Hofbauer cell DNAm to closely related cell types. **a** Syncytiotrophoblast samples (*n*=5) were projected onto principal components PC1 and PC2. Original samples used for constructing these PCs (Fig. [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig1)a) are shown (chorionic villi: dark red, trophoblast: yellow, all others: grey). Syncytiotrophoblast (orange) cluster with the chorionic villi and trophoblast samples. **b** Clustering on the top 1000 variable CpGs between chorionic villi, syncytiotrophoblast, and trophoblast samples. Hierarchical clustering with Euclidean distance was used for both CpG-wise (rows) and sample-wise (columns) clustering. DNAm is shown as a range between 0 and 100%. **c** Density plots are shown for select differentially methylated CpGs, which were identified using limma, with a Bonferroni adjust *p*\<0.01, and a mean difference in DNAm \>25%. CpGs are shown along the y-axis with their locational relationship (shown in brackets) to their associated gene (left). DNA methylation is shown on the x-axis. **d** Clustering on the top 1000 variable CpGs between Hofbauer cells and cord blood cell types. Hierarchical clustering with Euclidean distance was used for both CpG-wise and sample-wise clustering. WBC: whole cord blood, nRBC: nucleated red blood cells, NK: natural killer cells, CD4T: CD4+ T cells, CD8T: CD8 T cells, Gran: granulocytes, Bcell: B cells, DNAm: DNA methylation.
+
+```{r ch3fig3, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig3cap)", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch3', 'Figure3.pdf'))
+```
 
 The distinct DNAm profiles observed in placental HB suggests a distinct developmental trajectory.
-Indeed, the functional role and phenotypic diversity of HBs is complex and thought to vary across gestation, however, they show similar morphological and cell marker characteristics as adult and fetal monocytes [@reyes2017]. Therefore, to compare placental HBs to other immune cells, we compared their DNAm profiles to a curated 450k DNAm database of flow-sorted cord blood cell types (*n*=263) [@gervin2019]. We included only term HBs in this comparison since the available cord blood data was collected from term samples. To determine which cord blood cell types HB are most similar to, we applied unsupervised hierarchical clustering on the top 1000 most variable CpGs across each dataset. We observed that HB form their own distinct cluster (Fig. [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig3)d), indicating they likely have unique functional properties compared to other immune cells at similar developmental stages. This finding supports previous reports of distinct DNAm between HBs, fetal/maternal monocytes, and decidual macrophages [@kim2012].
+Indeed, the functional role and phenotypic diversity of HBs is complex and thought to vary across gestation, however, they show similar morphological and cell marker characteristics as adult and fetal monocytes [@reyes2017]. Therefore, to compare placental HBs to other immune cells, we compared their DNAm profiles to a curated 450k DNAm database of flow-sorted cord blood cell types (*n*=263) [@gervin2019]. We included only term HBs in this comparison since the available cord blood data was collected from term samples. To determine which cord blood cell types HB are most similar to, we applied unsupervised hierarchical clustering on the top 1000 most variable CpGs across each dataset. We observed that HB form their own distinct cluster (Figure \@ref(fig:ch3fig3)d), indicating they likely have unique functional properties compared to other immune cells at similar developmental stages. This finding supports previous reports of distinct DNAm between HBs, fetal/maternal monocytes, and decidual macrophages [@kim2012].
 HBs cluster most closely with monocytes and granulocytes, consistent with them having a common developmental origin.
 
 ### Canonical placental epigenetic features are not always present in all constituent cells
 
 To determine if previously identified placental specific features of DNAm are cell specific, we compared cell-type specific DNAm at partially methylated domains (PMDs), genomic imprinting, and repetitive elements [@schroeder2013; @hanna2016; @price2012] [[15](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR15 "Schroeder DI, Blair JD, Lott P, Yu HOK, Hong D, Crary F, et al. The human placenta methylome. Proc Natl Acad Sci. 2013;110(15):6037–42."), [18](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR18 "Hanna CW, Peñaherrera MS, Saadeh H, Andrews S, McFadden DE, Kelsey G, et al. Pervasive polymorphic imprinted methylation in the human placenta. Genome Res. 2016;26(6):756–67."), [38](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#ref-CR38 "Price EM, Cotton AM, Peñaherrera MS, McFadden DE, Kobor MS, Robinson W. Different measures of “genome-wide” DNA methylation exhibit unique properties in placental and somatic tissues. Epigenetics. 2012;7(6):652–63.")]. PMDs are large (\>100kb) regions of lower average methylation (\<70%) compared to surrounding regions. Placental PMDs are thought to contribute to the observation that placental DNAm on average is much lower than other human tissues [@robinson2015]. To characterize their cell-specificity, we calculated the percentage of CpGs that are found in previously defined placental PMDs [@schroeder2013] with DNAm falling into 20% intervals (0--20%, 20--40%, 40--60%, 60--80%, 80--100%).
-We observed that DNAm levels in PMDs is highly cell-specific (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4)a).
+We observed that DNAm levels in PMDs is highly cell-specific (Figure \@ref(fig:ch3fig4)a).
 TB, like CV, have more CpGs with low levels of DNAm in PMDs (0--40%) compared to other cell types.
 HB show a strong bias towards higher DNAm levels, with over 43% of CpGs in PMDs exhibiting \>80% DNAm.
 We observed some changes within cell types between trimesters.
@@ -136,24 +145,28 @@ All cell types except TB have less intermediately (40--60% intervals) methylated
 HB, in contrast, have more intermediately (40--60% intervals) methylated CpGs in third trimester.
 In summary, the methylation levels at CpGs in PMD regions were at the expected levels (relatively low methylated compared to surrounding regions) for CV and TB; sometimes hypermethylated for EC and SC; and were almost always highly methylated for HB, at levels typically found in somatic cells.
 
-Insert Figure 4
+<!--- Insert Figure 4 --->
 
-In examining specific regions containing PMDs, a strong bimodal pattern of methylation was observed, where regions of lower methylation (overlapping known placental PMD regions), which were surrounded by regions of higher methylation (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4) BC).
+(ref:ch3fig4cap) DNA methylation at partially methylated domains (PMDs), and imprinted differentially methylated regions (DMRs). **a** The percentage (y-axis) of CpGs in placental PMDs, falling into specific methylation intervals (0--20%, 20--40%, 40--60%, etc.) is shown for each cell type and trimester. **b** DNAm across specific regions on chromosome 21 (B) and 4 (**c**). PMDs are highlighted with a grey background. **d** Density plots (y-axis) of imprinted DMRs in term samples, divided into those that are imprinted in multiple tissues, (i.e. non-placental-specific; 1085 CpGs total; top) and placental-specific (981 CpGs total; bottom). The percentage of CpGs falling within 25%--75% is shown above each plot. **e** Cell-specific DNAm at the C19MC placental-specific imprinted DMR. This placental-specific imprint overlies a CpG island upstream of the miRNA cluster. **f** DNAm at placental-specific imprinted region for DCAF10
+
+```{r ch3fig4, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig4cap)", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch3', 'Figure4.pdf'))
+```
+
+In examining specific regions containing PMDs, a strong bimodal pattern of methylation was observed, where regions of lower methylation (overlapping known placental PMD regions), which were surrounded by regions of higher methylation (Figure \@ref(fig:ch3fig4)bc).
 TB DNAm levels followed closely the levels measured in CV, supporting that placental PMDs are likely reflecting mainly TB-specific DNAm patterns.
 In contrast, DNAm in HB often deviated from the other cell types, typically showing higher levels of methylation within PMDs.
 SC and EC often "followed" CV DNAm levels, but were not nearly as consistent as TB cells in this respect.
 
 We also looked at imprinted differentially methylated regions (DMRs) that are covered by the EPIC array.
-While many imprinted DMRs are maintained in somatic tissues, others are highly specific to the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. To evaluate whether placental-specific imprinting is maintained in constituent placental cell populations, we first combined the results from four studies [@hanna2016; @court2014; @sanchez-delgado2016; @zink2018] to form a list (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S7) of placental-specific (n CpGs = 981; n genes = 111) and non-placental specific (i.e. imprinted in other tissues) DMRs (n CpGs = 1085; n genes = 307). To determine if CpGs were intermediately-methylated, as would be expected for an imprinted DMR, we counted the proportion of CpGs with an average DNAm across both alleles that were in a range between 25 and 75% methylation. For CpGs in non-placental specific imprinted DMRs, the mean percentage of CpGs in the intermediate range across each cell type and in CV in term samples was 69% (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4)d). For placental-specific imprinted CpGs, the percentage of CpGs falling into this DNAm range was much more variable. As expected, in the term placental samples, TB and CV had a high percentage (76, 81%, respectively) of CpGs in this DNAm range. SC and EC had a lower, but still a majority, percentage of CpGs in this range (64, 64%, respectively). In contrast, HB cells had almost no CpGs (12%) in this range; almost all CpGs were unmethylated (\<25%). These proportions were similar in first trimester samples, except with EC and SC showing less intermediate methylation and more CpGs with less methylation at placental-specific imprints (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7A). These results suggest that placental-specific imprinting is maintained primarily in TB, and to a lesser degree EC and SC, and is virtually absent in HB. When considering the parental origin of imprinted DNAm [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016; @zink2018], paternally- methylated regions had more CpGs falling within 25--75% as compared to maternal ones (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7BC).
+While many imprinted DMRs are maintained in somatic tissues, others are highly specific to the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. To evaluate whether placental-specific imprinting is maintained in constituent placental cell populations, we first combined the results from four studies [@hanna2016; @court2014; @sanchez-delgado2016; @zink2018] to form a list (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S7) of placental-specific (n CpGs = 981; n genes = 111) and non-placental specific (i.e. imprinted in other tissues) DMRs (n CpGs = 1085; n genes = 307). To determine if CpGs were intermediately-methylated, as would be expected for an imprinted DMR, we counted the proportion of CpGs with an average DNAm across both alleles that were in a range between 25 and 75% methylation. For CpGs in non-placental specific imprinted DMRs, the mean percentage of CpGs in the intermediate range across each cell type and in CV in term samples was 69% (Figure \@ref(fig:ch3fig4)d). For placental-specific imprinted CpGs, the percentage of CpGs falling into this DNAm range was much more variable. As expected, in the term placental samples, TB and CV had a high percentage (76, 81%, respectively) of CpGs in this DNAm range. SC and EC had a lower, but still a majority, percentage of CpGs in this range (64, 64%, respectively). In contrast, HB cells had almost no CpGs (12%) in this range; almost all CpGs were unmethylated (\<25%). These proportions were similar in first trimester samples, except with EC and SC showing less intermediate methylation and more CpGs with less methylation at placental-specific imprints (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7A). These results suggest that placental-specific imprinting is maintained primarily in TB, and to a lesser degree EC and SC, and is virtually absent in HB. When considering the parental origin of imprinted DNAm [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016; @zink2018], paternally- methylated regions had more CpGs falling within 25--75% as compared to maternal ones (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7BC).
 We only estimated this in non-placental specific imprinted DMRs, since almost all validated placental-specific imprinted DMRs are maternally methylated.
 
 DNAm at specific imprinted DMRs was examined.
-As described above, TB and CV had intermediate (\>25, \<75%) DNAm at nearly all CpGs located in placental-specific imprinted regions (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4)d).
-Most of these CpGs, in contrast, are hypomethylated for HB cells, consistent with this cell type having a different developmental origin than other placental components (embryonic versus extraembryonic).
-However, at the imprinted DMR associated with the placental-specific expressed microRNA cluster C19MC, this pattern is reversed: HB have hypermethylation at this region (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4)e) as is reported for somatic adult/fetal tissues [@hanna2016].
+As described above, TB and CV had intermediate (\>25, \<75%) DNAm at nearly all CpGs located in placental-specific imprinted regions (Figure \@ref(fig:ch3fig4)d). Most of these CpGs, in contrast, are hypomethylated for HB cells, consistent with this cell type having a different developmental origin than other placental components (embryonic versus extraembryonic). However, at the imprinted DMR associated with the placental-specific expressed microRNA cluster C19MC, this pattern is reversed: HB have hypermethylation at this region (Figure \@ref(fig:ch3fig4)e) as is reported for somatic adult/fetal tissues [@hanna2016].
 For SC and EC, these cell types generally show lower levels of DNAm than TB/CV at the placental-imprinted DMRs, sometimes matching that in HBs and other times showing levels somewhere between HB and TB/CV.
-Such patterns are observed for genes such as *DCAF10* (Fig. [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig4)f), fibroblast growth factors *FGF8*, *FGF12* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S8AB), and at epigenetic regulator *JMJD1C* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9A).
-However, for a few DMRs, levels of DNAm in SC/EC matched that of TB/CV, such as ones associated with the DNAm maintenance gene *DNMT1* (Fig. [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig2)c) and *FGF14* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9B).
+Such patterns are observed for genes such as *DCAF10* (Figure \@ref(fig:ch3fig4)f), fibroblast growth factors *FGF8*, *FGF12* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S8AB), and at epigenetic regulator *JMJD1C* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9A).
+However, for a few DMRs, levels of DNAm in SC/EC matched that of TB/CV, such as ones associated with the DNAm maintenance gene *DNMT1* (Figure \@ref(fig:ch3fig2)c) and *FGF14* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9B).
 Higher DNAm than TB/CV was only observed for 1 gene (*RASGRF1*, Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S10).
 
 DNAm at repetitive elements, such as Alu and LINE1 elements, can be placental-specific and have been hypothesized to often be important regulatory components of placental processes [@reiss2007]. To determine if DNAm at repetitive elements is consistent across placental cell populations, we analyzed the subset of 850k CpGs that map to Alu (*n*=15,289) and LINE1 (22,006) elements. Compared to CV, TB had lower LINE1 DNAm (mean difference in DNAm=−1.5%, *p*=0.04), and HB had much higher DNAm (+9.7%, *p*\<0.001; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A). Similar relationships are seen for Alu elements (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A). TB had lower (−1.2%, *p*=0.02), HB had higher (+7.0%, p\<0.001), and EC had higher (+2.1%, *p*\<0.001) DNAm in Alu CpGs, when compared to CV. To explore large-scale DNAm differences, we averaged DNAm across all 850k probes and compared each cell type to CV. We found these relationships to be similar to those with the subset of repetitive elements probes (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A). HB had higher DNAm compared to CV (+5%, p\<0.001), and all other cell types had lower DNAm (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S8). The relationships we found for repetitive elements and global DNAm between cell types and CV were also largely consistent in our first trimester samples (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S8, Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11B). To determine genome-wide repetitive element DNAm, we used the random forest -based 'REMP' algorithm [@aryee2014] to predict 438,664 Alu CpGs and 39,136 LINE1 CpGs that are not covered by the EPIC array.
@@ -163,17 +176,23 @@ Relationships between cell types and CV for predicted and non-predicted repetiti
 
 To determine how DNAm changes in placental cell populations over gestation, we compared first and third trimester cell samples at 737,050 CpGs.
 We found 108,814 (TB); 94,619 (SC); 63,433 (EC) and 1550 (HB) significant cell-specific gestational-age dependent DMCs (Bonferroni *p*\<0.01, Δβ\>0.05).
-Strikingly, almost all of the TB DMCs show an increase in DNAm from first trimester to term (98.2%; Fig. [5](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig5)a).
+Strikingly, almost all of the TB DMCs show an increase in DNAm from first trimester to term (98.2%; Figure \@ref(fig:ch3fig5)a).
 Most gestational-age DMCs for HB and SC also show an increase in DNAm from first trimester to term (75.6 and 56.6%, respectively).
 In contrast, EC DMCs show less DNAm in the term compared to first trimester (77.1%).
 
-Insert Figure 5
+<!--- Insert Figure 5 --->
 
-Several interesting KEGG pathways and GO terms were significant (FDR\<0.05) in our functional enrichment analysis (Fig. [5](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig5) BC).
+(ref:ch3fig5cap) Gestational-age dependent DNA methylation within each placental cell population. **a** The distribution of the changes in DNA methylation between first and third trimester, within each cell type. Only statistically significant (Bonferroni p\<0.01) and biologically relevant (mean change in DNAm \>5%) differences are shown. Number of gestational age associated DMCs are labelled above each plot. **b** Functional enrichment analysis for GO terms tested with the R package *missMethyl*. **c** Functional enrichment analysis for KEGG pathways tested with the R package *missMethyl.* D) Enrichment for genomic features: CpG island-related elements, enhancers, PMDs, and gene features
+
+```{r ch3fig5, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig5cap)", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch3', 'Figure5.pdf'))
+```
+
+Several interesting KEGG pathways and GO terms were significant (FDR\<0.05) in our functional enrichment analysis (Figure \@ref(fig:ch3fig5)bc).
 Immune pathways ("Cytokine-Cytokine receptor interactions") and metabolism-related terms ("metabolic pathways", "ATP binding", "kinase activity") for trophoblast gestational-age dependent DMCs suggest a highly active state throughout gestation affecting multiple placental functions.
 As expected, stromal terms were highly associated with cellular/tissue structure -related terms, such as "extracellular matrix organization", and "Regulation of actin cytoskeleton".
 No significant pathway or GO terms were found significant for HB gestational-age DMCs.
-Most gestational-age dependent DMCs were enriched with open sea regions, regardless of direction of methylation (Fig. [5](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig5)d).
+Most gestational-age dependent DMCs were enriched with open sea regions, regardless of direction of methylation (Figure \@ref(fig:ch3fig5)d).
 HB DMCs that increase in methylation with gestational age were the only cell type DMCs that were heavily enriched for enhancers (Bonferroni *p*\<0.001).
 Trophoblast DMCs that increase in methylation with gestational age were enriched for CpG island shores, open seas, and intergenic regions (Bonferroni p\<0.001).
 All cell type-specific gestational-age dependent DMCs were depleted (Bonferroni p\<0.001) for promoter regions, suggesting that genome-wide promoter DNA methylation is mostly stable from first trimester to term.
@@ -182,9 +201,15 @@ All cell type-specific gestational-age dependent DMCs were depleted (Bonferroni 
 
 Using placental cell DNAm profiles as a reference, we assessed cellular composition in CV samples using cellular deconvolution.
 To select cell-type discriminating CpGs, the *pickCompProbes* function from the R package *minfi* [@aryee2014] was used, which takes the top 100 most hypo- and hyper-methylated CpGs ranked by F-test statistic for each cell type. Gestational-age specific references were created for first trimester and term. For first trimester samples, reference probes were selected from all first trimester cell samples, but also term nucleated red blood cells (nRBCs) and eSTB samples were used since these cell types are also present in early gestation [@vento-tormo2018]. For nRBC samples, 11 DNAm profiles from umbilical cord blood from public databases were included [@gervin2019].
-Reference CpGs determined from first trimester (Fig. [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig6)a) and term (Fig. [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig6)b) placental samples were highly cell-specific (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S9 and S10 for first trimester and term respectively).
+Reference CpGs determined from first trimester (Figure \@ref(fig:ch3fig6)a) and term (Figure \@ref(fig:ch3fig6)b) placental samples were highly cell-specific (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S9 and S10 for first trimester and term respectively).
 
-Insert Figure 6
+<!--- Insert Figure 6 --->
+
+(ref:ch3fig6cap) Assessing cell composition in first trimester and term CV samples. **a** Mean DNAm across each cell type (columns) for 600 first trimester deconvolution reference CpGs selected by minfi::pickCompProbes. CpGs (rows) are hierarchically clustered using euclidean distance. **b** Term reference CpGs. **c** Cell composition of 7 first trimester and 19 third trimester CV samples, estimated with cellular deconvolution using RPC. **d** Cell composition is similar between male and female term samples with respect to estimated percentage of each cell type (y-axis). F: female, M: male. **e** Cell composition is similar between Asian and European/Caucasian third trimester samples
+
+```{r ch3fig6, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig6cap)", fig.align='center',  out.extra=''}
+knitr::include_graphics(here::here('images', 'ch3', 'Figure6.pdf'))
+```
 
 To determine the best-performing cellular deconvolution method, 1500 in silico bulk mixtures were generated based on our cell data with known cellular composition proportions.
 These deconvolution methods were compared: constrained projection (CP) [@houseman2012], robust partial correlations (RPC) [@teschendorff2017a], and support-vector regression / CIBERSORT (CBS) [@newman2015]. All three methods were tested using the implementation from the R package *EpiDISH* [@zheng], and the constrained projection approach was used from implementations in both *EpiDISH* and *minfi* [@aryee2014] R packages.
@@ -203,12 +228,25 @@ Lastly, we applied cell deconvolution to chorionic villi samples (*n*=5) that we
 These samples had cell compositions that were heavily enriched for SC (mean=51%, sd=4%), compared to matched "normally" -processed chorionic villi (mean=11%, sd=2%; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S13C).
 
 RPC cellular deconvolution was applied to our 7 first trimester and 19 term CV samples.
-There was significant gestational-age specific variation in the estimated percentage of eSTB, TB, and SC (Table [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Tab3); Fig. [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig6)c).
+There was significant gestational-age specific variation in the estimated percentage of eSTB, TB, and SC (Table [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Tab3); Figure \@ref(fig:ch3fig6)c).
 eSTB were the most abundant cell type in all (19/19) term samples (mean=58%), whereas SC was the most abundant in most (5/7) first trimester samples (mean=43%).
 There were significant changes from first trimester to term samples: there was a significant mean increase of 23% in eSTB (Bonferroni-adjusted *p*\<0.001), a decrease in SC (−31%; adjusted *p*\<0.001) and a small increase in EC (+5%; adjust *p*\<=0.005).
 A detectable contribution of nRBCs was not estimated in any sample using RPC deconvolution.
-No significant (adjusted *p*\>0.01) differences in cell composition were observed between male (*n*=9) and female (*n*=10) samples (Fig. [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig6)d; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12), or between European/Caucasian (*n*=11) and East Asian (*n*=6) samples (Fig. [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig6)e; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12) for term CV.
+No significant (adjusted *p*\>0.01) differences in cell composition were observed between male (*n*=9) and female (*n*=10) samples (Figure \@ref(fig:ch3fig6)d; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12), or between European/Caucasian (*n*=11) and East Asian (*n*=6) samples (Figure \@ref(fig:ch3fig6)e; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12) for term CV.
 Within-trimester gestational age (estimated and reported) was not significantly associated with cell composition (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12), although numbers were small.
+
+<!-- Insert Table 3 -->
+
+\captionsetup{width=6.5in}
+
+```{r ch3tab3, eval = T, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+kableExtra::kbl(
+  readr::read_csv(here::here('Tables', 'ch3', 'table3.csv')) %>%
+    dplyr::rename(` ` = X1),
+  booktabs = TRUE,
+  caption = 'Mean of cell composition estimates (\\%) for first trimester and term CV samples using RPC cellular deconvolution. Standard deviation is shown in parentheses') %>%
+  kableExtra::kable_styling(full_width = TRUE) 
+```
 
 ## Discussion
 
